set(CUSTOM_CMAKE_C_FLAGS "")
set(CUSTOM_CMAKE_CXX_FLAGS "")

set(ENABLE_CJSON_TEST OFF CACHE BOOL "Disable CJSON test")

set(ENABLE_FUZZING OFF)
set(ENABLE_CJSON_UNINSTALL OFF)
set(ENABLE_TARGET_EXPORT OFF)

if(CONFIG_MODULE_CJSON_SHARED)
    set(BUILD_SHARED_LIBS ON)
endif()

cmake_policy(SET CMP0077 NEW)

add_subdirectory(cJSON)